infra/minio/minio_total.yaml
# minio_total.yaml

## Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: minio-ns  # Create a namespace named "minio-ns"

---

## Pod
apiVersion: v1
kind: Pod
metadata:
  name: minio-pod  # Create a pod named "minio-pod" within the "minio-ns" namespace
spec:
  containers:
    - name: minio-pod
      image: nginx  # Use the Nginx image for this pod

---

## Deployment    -> managing apps
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio-deployment  # Create a deployment named "minio-deployment" in "minio-ns"
spec:
  replicas: 3  # Deploy 3 replicas
  selector:
    matchLabels:
      app: minio-pod
  template:
    metadata:
      labels:
        app: minio-pod
    spec:
      containers:
        - name: minio-pod
          image: nginx

---

## StatefulSet    -> managing databases
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: web  # Create a StatefulSet named "web" in "minio-ns"
  namespace: minio-ns
spec:
  serviceName: "nginx"  # Use the service named "nginx" for network identity
  replicas: 2  # Deploy 2 replicas
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: registry.k8s.io/nginx-slim:0.8
          ports:
            - containerPort: 80
              name: web
          volumeMounts:
            - name: www
              mountPath: /usr/share/nginx/html
  volumeClaimTemplates:
    - metadata:
        name: www
      spec:
        accessModes: ["ReadWriteOnce"]  # Define storage access mode

---
