infra/minio/minio-dev-cluster.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: minio
  name: minio
  # namespace: argo # Change this value to match the namespace metadata.name
spec:
  containers:
  - name: minio
    image: quay.io/minio/minio:RELEASE.2023-04-07T05-28-58Z
    command:
    - /bin/bash
    - -c
    args: 
    - minio server /data --console-address :9001
    volumeMounts:
    - mountPath: /data
      name: localvolume # Corresponds to the `spec.volumes` Persistent Volume
    ports:
      - containerPort: 9000
        hostPort: 9000
      - containerPort: 9001
        hostPort: 9001
  volumes:
  - name: localvolume
    hostPath: # MinIO generally recommends using locally-attached volumes
      path: /Users/olgabraginskaya/argo-local-tutorial/data # Specify a path to a local drive or volume on the Kubernetes worker node
      type: DirectoryOrCreate # The path to the last directory must exist
---
apiVersion: v1
kind: Service
metadata:
  name: minio-service
  # namespace: argo 
spec:
  selector:
    app: minio
  ports:
    - name: "ui-address"
      port: 9000
      targetPort: 9000
      protocol: TCP
    - name: "console-address"
      port: 9001
      targetPort: 9001
      protocol: TCP
